Updated header.css to fix overflowing of navigation on zoom

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1321,7 +1321,7 @@ header nav .nav-tools {
     .nav-menu-column.right
     .submenu
     li:has(ul.browse-country) {
-    grid-column-start: 1/2;
+    grid-column: 1/2;
   }
 
   header
